# connected-clock

./: .gitignore  README.md  meson.build
BigBen/: main.cpp
BigBen.xcodeproj/: project.pbxproj
BigBen.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
BigBen.xcodeproj/xcuserdata/Guillaume.xcuserdatad/xcschemes/: xcschememanagement.plist
data/cuckoo/classic/: credits.txt
data/westminster/bigben/: _readme_and_license.txt
inc/: clock.hpp  sound.hpp
service/: connected-clock.service
src/: clock.cpp  clock.h  cuckoo.cpp  cuckoo.h  main.cpp  sound.cpp  sound.h  westminster.cpp  westminster.h
